--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          (head)
+          <img src="./img/logo.png"/>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        (body)
+        <img src="./img/city.jpg"/>
       </section>
     </div>
 
@@ -33,8 +33,6 @@
         (footer)
       </footer>
     </div>
-
-    
 
   </body>
 </html>
