--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <img src="./img/logo.png"/>
+          <img class="logo" src="./img/logo.png"/>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <img src="./img/city.jpg"/>
+        <img class="city" src="./img/city.jpg"/>
       </section>
     </div>
 
