--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
   <body>
 
     <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <img class="logo" src="./img/logo.png"/>
-        </header>
-    </div>
+    <header>
+      <img class="logo" src="./img/logo.png"/>
+    </header>
 
     <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <img class="city" src="./img/city.jpg"/>
-      </section>
-    </div>
+    <!-- <div id="main_content_wrap" class="outer"> -->
+      <!-- <section id="main_content" class="inner"> -->
+      <div class="main">
+        <!-- <img class="city" src="./img/city.jpg"/> -->
+        <div class="city"></div>
+      </div>
+        
+      <!-- </section> -->
+    <!-- </div> -->
 
     <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        (footer)
-      </footer>
-    </div>
+    <footer>
+      <span class="email">contact@triarii.com</span>
+      <span class="phone">617-555-5555</span>
+    </footer>
 
   </body>
 </html>
