--- a/index.html
+++ b/index.html
@@ -11,43 +11,50 @@
     <title>Triarii Capital</title>
 
     <!-- favicons -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="manifest.json">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
   </head>
 
   <body>
+    <div class="outer">
+    <div class="middle">
+    <div class="inner">
 
-    <!-- HEADER -->
-    <header>
-      <img class="logo" src="./img/logo.png"/>
-    </header>
+      <!-- HEADER -->
+      <header>
+        <img class="logo" src="./img/logo.png"/>
+      </header>
 
-    <!-- MAIN CONTENT -->
-    <!-- <div id="main_content_wrap" class="outer"> -->
-      <!-- <section id="main_content" class="inner"> -->
-      <div class="main">
-        <!-- <img class="city" src="./img/city.jpg"/> -->
-        <div class="city"></div>
-      </div>
-        
-      <!-- </section> -->
-    <!-- </div> -->
+      <!-- MAIN CONTENT -->
+      <!-- <div id="main_content_wrap" class="outer"> -->
+        <!-- <section id="main_content" class="inner"> -->
+        <div class="content">
+          <!-- <img class="city" src="./img/city.jpg"/> -->
+          <div class="city"></div>
+        </div>
+          
+        <!-- </section> -->
+      <!-- </div> -->
 
-    <!-- FOOTER  -->
-    <footer>
-      <span class="email">inquiries@triariicapital.com</span>
-      <span class="phone">+1 (617) 807-0405</span>
-    </footer>
+      <!-- FOOTER  -->
+      <footer>
+        <span class="email">inquiries@triariicapital.com</span>
+        <span class="phone">+1 (617) 807-0405</span>
+      </footer>
+
+    </div>
+    </div>
+    </div>
 
   </body>
 </html>
