--- a/index.html
+++ b/index.html
@@ -48,13 +48,18 @@
 
       <!-- FOOTER  -->
       <footer>
-        <span class="email">inquiries@triariicapital.com</span>
-        <span class="phone">+1 (617) 807-0405</span>
+        <span class="email"><a id="email" href="mailto:inquiries@triariicapital.com">inquiries@triariicapital.com</a></span>
+        <span class="phone"><a id="phone" href="tel:+1617807-0405">+1 (617) 807-0405</a></span>
+        <!-- <span class="mobile">(mobile)</span> -->
       </footer>
 
     </div>
     </div>
     </div>
+
+    <script>
+      window.getElementById("email").setText();
+    </script>
 
   </body>
 </html>
