--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
       <!-- FOOTER  -->
       <footer>
-        <span class="email"><a id="email" href="mailto:inquiries@triariicapital.com">inquiries@triariicapital.com</a></span>
-        <span class="phone"><a id="phone" href="tel:+1617807-0405">+1 (617) 807-0405</a></span>
+        <span class="email"><a id="email" href="mailto:&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;">&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;</a></span>
+        <span class="phone"><a id="phone" href="tel:+&#049;&#054;&#049;&#055;&#056;&#048;&#055;&#048;&#052;&#048;&#053;">+&#049;&#032;(&#054;&#049;&#055;)&#032;&#056;&#048;&#055;&#045;&#048;&#052;&#048;&#053;</a></span>
         <!-- <span class="mobile">(mobile)</span> -->
       </footer>
 
