--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <!-- <span class="mobile">(mobile)</span> -->
       </footer>
 
+      <div id="attribution">
+        <a href="https://www.flickr.com/photos/rjshade/9845721283/">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/">Robbie Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/">CC BY</a>
+      </div>
+
     </div>
     </div>
     </div>
