--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </footer>
 
       <div id="attribution">
-        <a href="https://www.flickr.com/photos/rjshade/9845721283/">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/">Robbie Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/">CC BY</a>
+        <a href="https://www.flickr.com/photos/rjshade/9845721283/" target="_blank">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/" target="_blank">Robbie Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">CC BY</a>
       </div>
 
     </div>
