--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Triarii : ">
+    <meta name="description" content="Triarii Capital">
+    <meta name="keywords" content="hedge fund, ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 
@@ -50,15 +51,28 @@
       <!-- </div> -->
 
       <!-- FOOTER  -->
-      <footer>
+      <div class="contact">
         <span class="email"><a id="email" href="mailto:&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;">&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;</a></span>
         <span class="phone"><a id="phone" href="tel:+&#049;&#054;&#049;&#055;&#056;&#048;&#055;&#048;&#052;&#048;&#053;">+&#049;&#032;(&#054;&#049;&#055;)&#032;&#056;&#048;&#055;&#045;&#048;&#052;&#048;&#053;</a></span>
         <!-- <span class="mobile">(mobile)</span> -->
-      </footer>
-
-      <div id="attribution">
-        <a href="https://www.flickr.com/photos/rjshade/9845721283/" target="_blank">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/" target="_blank">Robbie Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">CC BY</a>
       </div>
+
+      <table class="footer">
+
+        <tr>
+          <td class="footer-nav">
+            <a href="./tos.html">Terms of Service</a>
+          </td>
+          <td id="attribution">
+            <span class="copyright">Copyright &copy; 2015 Triarii Capital</span>
+            &nbsp;&nbsp;
+            •
+            &nbsp;&nbsp;
+            <a href="https://www.flickr.com/photos/rjshade/9845721283/" target="_blank">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/" target="_blank">Robbie Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">CC BY</a>
+          </td>
+        </tr>
+
+      </table>
 
     </div>
     </div>
