--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
   </head>
 
@@ -34,28 +34,21 @@
     <div class="middle">
     <div class="inner">
 
-      <!-- HEADER -->
       <header>
         <img class="logo" src="./img/logo.png"/>
       </header>
 
-      <!-- MAIN CONTENT -->
-      <!-- <div id="main_content_wrap" class="outer"> -->
-        <!-- <section id="main_content" class="inner"> -->
-        <div class="content">
-          <!-- <img class="city" src="./img/city.jpg"/> -->
-          <div class="city"></div>
-        </div>
+      <div class="content">
+        <div class="city"></div>
+      </div>
           
-        <!-- </section> -->
-      <!-- </div> -->
-
-      <!-- FOOTER  -->
       <div class="contact">
         <span class="email"><a id="email" href="mailto:&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;">&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;</a></span>
         <span class="phone"><a id="phone" href="tel:+&#049;&#054;&#049;&#055;&#056;&#048;&#055;&#048;&#052;&#048;&#053;">+&#049;&#032;(&#054;&#049;&#055;)&#032;&#056;&#048;&#055;&#045;&#048;&#052;&#048;&#053;</a></span>
         <!-- <span class="mobile">(mobile)</span> -->
       </div>
+
+    </div>
 
       <table class="footer">
 
@@ -68,7 +61,7 @@
             &nbsp;&nbsp;
             •
             &nbsp;&nbsp;
-            <a href="https://www.flickr.com/photos/rjshade/9845721283/" target="_blank">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/" target="_blank">Robbie Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">CC BY</a>
+            <a href="https://www.flickr.com/photos/rjshade/9845721283/" target="_blank">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/" target="_blank">R Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">CC BY</a>
           </td>
         </tr>
 
@@ -76,11 +69,6 @@
 
     </div>
     </div>
-    </div>
-
-    <script>
-      window.getElementById("email").setText();
-    </script>
 
   </body>
 </html>
