--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Vollkorn:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
+    <!-- Bing -->
+    <meta name="msvalidate.01" content="7AE255FEA9CCB8B5930958DC40D7CC33" />
+
   </head>
 
   <body>
