--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Triarii Capital">
-    <meta name="keywords" content="hedge fund, ">
+    <meta name="description" content="Triarii Capital Management is a global investment firm, based in Boston, MA, USA. Triarii's investment strategy is opportunistic value-driven special situations, across the capital structure.">
+    <meta name="keywords" content="Triarii, Triarii Capital, Triarii Capital Management, hedge fund">
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 
