--- a/index2.html
+++ b/index2.html
@@ -42,76 +42,45 @@
   </head>
 
   <body>
+    <div class="outer">
+    <div class="middle">
+    <div class="inner">
 
-    <div id="page">
-  
-      <div id="top">
-        <!-- <header> -->
+      <header>
+        <img class="logo" src="./img/logo.png"/>
+      </header>
 
-          <!-- <div class="parent"> -->
-          <!-- <div class="child"> -->
-
-          <table><tr><td>
-
-            <img class="logo" src="./img/logo.png" alt="Triarii Capital Management"/>
-
-          </td></tr></table>
-
-          <!-- </div> -->
-          <!-- </div> -->
-
-        <!-- </header> -->
+      <div class="content">
+        <div class="city"></div>
       </div>
-
-      <div id="middle">
-        <!-- The Middle -->
-        <!-- <div class="content"> -->
-          <div class="city"></div>
-        <!-- </div> -->
-      </div>
-
-      <div id="bottom">
-        <!-- The Bottom -->
-        <!-- <div class="child2"> -->
-
-        <table><tr><td>
-        <div class="contact">
-          <span class="email"><a id="email" href="mailto:&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;">&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;</a></span>
-          <span class="phone"><a id="phone" href="tel:+&#049;&#054;&#049;&#055;&#056;&#048;&#055;&#048;&#052;&#048;&#053;">+&#049;&#032;(&#054;&#049;&#055;)&#032;&#056;&#048;&#055;&#045;&#048;&#052;&#048;&#053;</a></span>
           
-        </div>
-        </td></tr></table>
-        
+      <div class="contact">
+        <span class="email"><a id="email" href="mailto:&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;">&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;</a></span>
+        <span class="phone"><a id="phone" href="tel:+&#049;&#054;&#049;&#055;&#056;&#048;&#055;&#048;&#052;&#048;&#053;">+&#049;&#032;(&#054;&#049;&#055;)&#032;&#056;&#048;&#055;&#045;&#048;&#052;&#048;&#053;</a></span>
+        <!-- <span class="mobile">(mobile)</span> -->
       </div>
 
     </div>
 
+      <table class="footer">
 
-<!--     <div class="page">
+        <tr>
+          <td class="footer-nav">
+            <a href="./tos.html">Terms of Service</a>
+          </td>
+          <td id="attribution">
+            <span class="copyright">Copyright &copy; 2015 Triarii Capital</span>
+            &nbsp;&nbsp;
+            •
+            &nbsp;&nbsp;
+            <a href="https://www.flickr.com/photos/rjshade/9845721283/" target="_blank">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/" target="_blank">R Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">CC BY</a>
+          </td>
+        </tr>
 
+      </table>
 
-
-
-
-    </div> -->
-
-    <table class="footer">
-
-      <tr>
-        <td class="footer-nav">
-          <a href="./tos.html">Terms of Service</a>
-        </td>
-        <td id="attribution">
-          <span class="copyright">Copyright &copy; 2015 Triarii Capital</span>
-          &nbsp;&nbsp;
-          •
-          &nbsp;&nbsp;
-          <a href="https://www.flickr.com/photos/rjshade/9845721283/" target="_blank">Photo</a> by <a href="https://www.flickr.com/photos/rjshade/" target="_blank">R Shade</a> / <a href="https://creativecommons.org/licenses/by/2.0/" target="_blank">CC BY</a>
-        </td>
-      </tr>
-
-    </table>
-
+    </div>
+    </div>
 
   </body>
 </html>
