--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
           <span class="email"><a id="email" href="mailto:&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;">&#105;&#110;&#113;&#117;&#105;&#114;&#105;&#101;&#115;&#064;&#116;&#114;&#105;&#097;&#114;&#105;&#105;&#099;&#097;&#112;&#105;&#116;&#097;&#108;&#046;&#099;&#111;&#109;</a></span>
           
           <!-- <span class="phone"><a id="phone" href="tel:&#43;&#49;&#54;&#49;&#55;&#51;&#52;&#50;&#56;&#49;&#54;&#56;">&#43;&#49; &#40;&#54;&#49;&#55;&#41; &#51;&#52;&#50;&#45;&#56;&#49;&#54;&#56;</a></span> -->
-          <span class="phone"><a id="phone" href="tel:&#43;&#49;&#40;&#54;&#49;&#55;&#41;&#56;&#49;&#50;&#45;&#52;&#51;&#55;&#56;">&#43;&#49; &#40;&#54;&#49;&#55;&#41; &#56;&#49;&#50;&#45;&#52;&#51;&#55;&#56;</a></span>
-          
+          <!-- <span class="phone"><a id="phone" href="tel:&#43;&#49;&#40;&#54;&#49;&#55;&#41;&#56;&#49;&#50;&#45;&#52;&#51;&#55;&#56;">&#43;&#49; &#40;&#54;&#49;&#55;&#41; &#56;&#49;&#50;&#45;&#52;&#51;&#55;&#56;</a></span> -->
+          <span class="phone"><a id="phone" href="tel:&#43;&#49;&#40;&#54;&#49;&#55;&#41;&#51;&#48;&#50;&#45;&#54;&#50;&#54;&#55;">&#43;&#49; &#40;&#54;&#49;&#55;&#41; &#51;&#48;&#50;&#45;&#54;&#50;&#54;&#55;</a></span>
+
           <!-- <span class="address">175 Federal St, Suite 509, Boston, MA 02110</span> -->
           <span class="address">131 Dartmouth St, 3rd Fl, Boston, MA 02116</span>
 
